tests/snapshots/number__build_argument-2.snap
---
source: tests/number.rs
info:
  program: argument.out
  args: []
---
success: false
exit_code: 50
----- stdout -----

----- stderr -----
