tests/snapshots/number__build_number.snap
---
source: tests/number.rs
info:
  program: skribi
  args:
    - build
    - resources/test_programs/number.skrb
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: overriding the module target triple with x86_64-unknown-linux-gnu [-Woverride-module]
1 warning generated.
